old dependencies removed

--- a/SpringBootDataList/src/main/resources/templates/home.html
+++ b/SpringBootDataList/src/main/resources/templates/home.html
@@ -5,10 +5,6 @@
 <title>Visitor List</title>
 </head>
 <body>
-<h1><?php
-		$message = "Hello Swanson";
-		echo $message;
-	?></h1>
 	<table>
 		<thead>
 			<tr>
@@ -33,8 +29,8 @@
 	<form action="/addVisitor" method="POST">
 		First Name <input type="text" id="firstName" name="firstName" /><br />
 		Last Name <input type="text" id="lastName" name="lastName" /><br />
-		Email <input type="text" id="email" name="email" /><br /> Phone
-		Number <input type="text" id="phoneNumber" name="phoneNumber" /><br />
+		Email <input type="text" id="email" name="email" /><br /> 
+		Phone Number <input type="text" id="phoneNumber" name="phoneNumber" /><br />
 		<input type="submit" />
 	</form>
 </body>
